--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
     
     <h2> Professional Experience </h2>
-    <h3> Exchence - Unviversity of East London | London UK </h3>
+    <h3> Exchence - University of East London | London UK </h3>
     <h3> Backend Developer Intern | Oct 2023 - Sept 2024 </h3>
     <ul>
         <li> Designed and implemented RESTful APIs in Node.js, improving data throughput by 25% and
